# uhsNN

./: .gitignore  .gitmodules  11_20_preds.txt  725.txt  735.txt  8_preproc.uhs  CMakeLists.txt  DOCKS8.nnet  DOCKS8_preproc.uhs  DOCKS9.nnet  DOCKS9_preproc.uhs  DOCKSNone_preproc.uhs  Makefile  README.md  UHS_k_L.py  cmake_install.cmake  compare  convert.py  decyc7.txt  decyc8.txt  graph.py  index.html  module.cc  predict.cc  predict.cpp  predict.py  predicted725.txt  preds.txt  preproc.py  pyemb3.py  run_benchmarks  run_benchmarks_10  run_benchmarks_10_all  run_benchmarks_11  run_benchmarks_11_all  run_nopreds  train  train.py  uhsNN.py
data/: DOCKS10_100.txt  DOCKS10_110.txt  DOCKS10_120.txt  DOCKS10_130.txt  DOCKS10_140.txt  DOCKS10_150.txt  DOCKS10_160.txt  DOCKS10_170.txt  DOCKS10_180.txt  DOCKS10_190.txt  DOCKS10_20.txt  DOCKS10_200.txt  DOCKS10_30.txt  DOCKS10_40.txt  DOCKS10_50.txt  DOCKS10_60.txt  DOCKS10_70.txt  DOCKS10_80.txt  DOCKS10_90.txt  DOCKS7_100.txt.1  DOCKS7_110.txt.1  DOCKS7_15.txt  DOCKS7_20.txt  DOCKS7_25.txt  DOCKS7_30.txt.1  DOCKS7_35.txt  DOCKS7_40.txt  DOCKS7_50.txt  DOCKS7_60.txt.1  DOCKS7_70.txt  DOCKS7_80.txt.1  DOCKS7_90.txt  DOCKS8_100.txt  DOCKS8_110.txt  DOCKS8_120.txt  DOCKS8_130.txt  DOCKS8_140.txt  DOCKS8_20.txt  DOCKS8_30.txt  DOCKS8_40.txt  (+26 more)
int/: test.txt
src/: docks.h  graph.h  utils.cc
